# WebApps

WebApps/IETMViewer/: doc_content.html  index.html  manifest.webapp
WebApps/IETMViewer/css/: doc.css  jquery.mobile-1.4.5.min.css  login.css  products.css  side-nav.css
WebApps/IETMViewer/data/: cdcatalog.xsl  load.js
WebApps/bds-map/: index.html  manifest.webapp
WebApps/exhibition-hall-app/: favorites.html  gallery-list.html  help.html  index.html  manifest.webapp  search.html  settings.html
WebApps/siskia-8170623/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  main.cpp
WebApps/siskia-8170623/Resources/: keyboard_atm.xml
WebApps/siskia-8170623/SogouShell/dict/: shell.conf
WebApps/siskia-8170623/SogouShell/dict/HWDict/: Chinese-weights.data  Japanese-weights.data  Korean-weights.data
WebApps/siskia-8170623/SogouShell/dict/PYDict/: sgim_bigram_serdata.bin.600161226  sgim_gd_old_sys_serdata.bin.600161226
WebApps/siskia-8170623/SogouShell/inc/: SogouShell.h
WebApps/siskia-8170623/include/: t_fontSkia.h  t_hdcSkia.h  t_imageSkia.h  t_penSkia.h  t_timerSkia.h  t_wndPopUpSkia.h  t_wndTopSkia.h
WebApps/siskia-8170623/skia/include/core/: .SkTypeface.h.swp
WebApps/siskia-8170623/sougou/include/: Platform.h  SGkeyboardLib.h  Types.h  UI.h  UIDefine.h  Utils.h  t_font.h  t_hdc.h  t_image.h  t_pen.h  t_timer.h  t_wndBase.h  t_wndPopUp.h  t_wndTop.h  t_wndTopImplBase.h
WebApps/siskia-8170623/src/: bianyi.txt  t_fontSkia.cpp  t_hdcSkia.cpp  t_imageSkia.cpp  t_penSkia.cpp  t_timerSkia.cpp  t_wndPopUpSkia.cpp  t_wndTopSkia.cpp
(+70 files in other folders)
